added get all comments
