# internal/model/Comment.go
@@ -2,6 +2,7 @@ package model
 
 import "github.com/johnearl92/xendit-ta.git/internal/model/errors"
 
+// Comment model definition
 type Comment struct {
 	BaseModel
 	Message        string `gorm:"type:varchar(350)"`
@@ -9,13 +10,18 @@ type Comment struct {
 	OrganizationID string
 }
 
-// CommentReq parameters model
-//
-// swagger:parameters Comment
+// CommentReq comment request data structure
 type CommentReq struct {
+	Comment string `json:"comment"`
+}
+
+// CommentWrapper parameters model
+//
+// swagger:parameters CommentReq
+type CommentWrapper struct {
 	// in: body
 	// required: true
-	Comment string `json:"comment"`
+	CommentReq CommentReq
 }
 
 func (p *CommentReq) ValidateComment() errors.JSONErrors {
@@ -29,4 +35,18 @@ func (p *CommentReq) ValidateComment() errors.JSONErrors {
 			"Comment should be less than 350 characters")
 	}
 	return error
+}
+
+// CommentResponse comments response
+type CommentResponse struct {
+	Comments []string `json:"comments"`
+}
+
+// CommentResWrapper wrapper struct for CommentRes
+//
+// swagger:response CommentResponse
+type CommentResWrapper struct {
+	// in: body
+	// required: true
+	CommentResponse CommentResponse
 }
